<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="action_settings">Settings</string>
    <string-array name="facebook_array">
        <item>User Profile</item>
        <item>Post Message</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Upload Image</item>
        <item>Get Albums</item>
        <item>Update Story</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="twitter_array">
        <item>User Profile</item>
        <item>Send Tweet</item>
        <item>Friends</item>
        <item>Get Feeds</item>
        <item>Upload Image</item>
        <item>Get Albums</item>
        <item>Close Dialog</item>
    </string-array>
    <string-array name="drawable_array">
        <item>share</item>
        <item>profile</item>
        <item>contacts</item>
        <item>feeds</item>
        <item>image</item>
        <item>albums</item>
        <item>notepad</item>
        <item>close</item>
    </string-array>
    <string name="playstore_addres">https://play.google.com/store/apps/details?id=%1$s&amp;hl=en</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_news">News</string>
    <string name="menu_speakers">Speakers</string>
    <string name="menu_places">Location</string>
    <string name="menu_schedule">Agenda</string>
    <string name="menu_solutions">Products</string>
    <string name="menu_user_log_in">Log In</string>
    <string name="menu_user_profile">Profile</string>
    <string name="menu_game">Game</string>
    <string name="menu_share">Share</string>
    <string name="menu_surveys">Polls</string>
    <string name="menu_conference">Conference</string>
    <string name="menu_participants">People</string>
    <string name="login_credentials_empty">Please complete your login.</string>
    <string name="login_empty">Please provide your email address.</string>
    <string name="login_validating_credentials">Verification of credentials. Please, wait ...</string>
    <string name="login_creating">Create a new account. Please, wait ...</string>
    <string name="login_updating">Update your account. Please, wait ...</string>
    <string name="login_updating_conference">Updating the agenda ...</string>
    <string name="login_updating_solutions">Product update ...</string>
    <string name="login_updating_points">Updating the competition ...</string>
    <string name="login_wrong_credentials">Invalid email address or password!</string>
    <string name="login_account_inactive">Account has been disabled!</string>
    <string name="login_error">Can\'t login!\n\nPlease try again later.</string>
    <string name="login_create_error">Can\'t create new user!\n\nPlease try again later.</string>
    <string name="login_create_missing">Please fill in all mandatory fields.</string>
    <string name="login_passwords_missing">Please fill in the fields with the old and new password!</string>
    <string name="login_passwords_mismatch">Passwords do not match!</string>
    <string name="login_email_wrong">E-mail address has an invalid format!\n\nPlease correct it and try again.</string>
    <string name="login_email_used">The email address is already taken!\n\nPlease try to login.</string>
    <string name="login_email_not_exists">There is no user with the email address %s!</string>
    <string name="login_update_error">Can\'t update data!\n\nPlease try again later.</string>
    <string name="reset_password_error">Can\'t reset a user\'s password!\n\nPlease try again later.</string>
    <string name="reset_password_completed">Message with further instructions has been sent to %s.\n\nPlease check your email.</string>
    <string name="login_password_changing">Changing your password ...</string>
    <string name="login_password_reseting">Reset password ...</string>
    <string name="login_password_wrong_credentials">Invalid login details!\n\nPlease check the old password and try again.</string>
    <string name="login_password_change_error">Can\'t change your password!\n\nPlease try again.</string>
    <string name="login_password_change_success">Pasword has been changed.</string>
    <string name="login_to_use_functionality">This option is available only to registered users.</string>
    <string name="profile">Profile</string>
    <string name="password_reset">Reset password</string>
    <string name="password_change">Change password</string>
    <string name="password_old">Old password</string>
    <string name="password_new_1">New password</string>
    <string name="password_new_2">Repeat the new password</string>
    <string name="password_invalid">Password must meet the requirements:</string>
    <string name="password_lower">- contains a lowercase character</string>
    <string name="password_upper">- contains a uppercase character</string>
    <string name="password_number">- contains a base 10 digits character (0-9)</string>
    <string name="password_non_alpha">- contains a nonalphanumeric character</string>
    <string name="password_minimum_length">- minimum length is %s</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="warning">Warning</string>
    <string name="error">Opps!</string>
    <string name="send">Send</string>
    <string name="more">more ...</string>
    <string name="updating">Updating ...</string>
    <string name="updated">Updated</string>
    <string name="never">never</string>
    <string name="no_data">Try pull to refresh</string>
    <string name="no_data_filter">No data to display</string>
    <string name="no_data_favorite">There are no favorites to display</string>
    <string name="news">News</string>
    <string name="news_prefix">news by</string>
    <string name="ok">Ok</string>
    <string name="by">by</string>
    <string name="info">Info</string>
    <string name="email">Email</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="password2">Repeat password</string>
    <string name="or">or</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="position">Position</string>
    <string name="company">Company</string>
    <string name="oblige">*</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="options">Options</string>
    <string name="settings">Settings</string>
    <string name="question">Question</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="me">Me</string>
    <string name="back">Back</string>
    <string name="remove">Remove</string>
    <string name="register">Sing up</string>
    <string name="verify">Verify</string>
    <string name="logout">Logout</string>
    <string name="logout_question">Are you sure you want to log out?</string>
    <string name="login">Log In</string>
    <string name="login_title">Log in or Create Your Account</string>
    <string name="login_button">Log in</string>
    <string name="login_privacy_button">By signing up, you agree to our Terms and Privacy Policy</string>
    <string name="login_privacy">Terms and Privacy Policy</string>
    <string name="login_privacy_empty">Can\'t load Privacy Policy.\nTry pull to refresh.</string>
    <string name="login_password">Forgot Your password?</string>
    <string name="login_or_sign_in">or Sign in with</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_register">Sign Up Now</string>
    <string name="filter">Filter</string>
    <string name="filter_show_all">Show all</string>
    <string name="no_network">No connection to the Internet.\nPlease try again later.</string>
    <string name="server_error">Can\'t refresh data.\nPlease try again later.</string>
    <string name="wrong_credentials">Incorrect login or password. Please verify your data and try again.</string>
    <string name="facebook_login_creating">Log in with Facebook. Please, wait ...</string>
    <string name="facebook_error">We can\'t communicate with Facebook.\n\nPlease verify that Facebook app is installed and try again later.</string>
    <string name="twitter_login_creating">Log in with Twitter. Please, wait ...</string>
    <string name="twitter_error">We can\'t communicate with Twitter.\n\nPlease verify that Twitter app is installed or Twitter account is configured in Settings app and try again later.</string>
    <string name="linkedin_login_creating">Log in with LinkedIn. Please, wait ...</string>
    <string name="linkedin_error">We can\'t communicate with LinkedIn.\nPlease verify that LinkedIn app is installed and try again later.</string>
    <string name="linkedin_duplicate_info">LinkedIn reports that you published this content already.</string>
    <string name="event_description_empty">No details are available.</string>
    <string name="event_speakers_empty">No speakers are available.</string>
    <string name="event_rate_not_started">The event will be available for the evaluation of %s.</string>
    <string name="event_comment_not_started">The event will be available for comment from %s.</string>
    <string name="event_document_not_started">The document will be available for download from %s.</string>
    <string name="event_document_check_error">Can\'t check document is available to download.\nPlease try again later.</string>
    <string name="event_comment_placeholder">Write a comment ...</string>
    <string name="event_question_placeholder">Write a question ...</string>
    <string name="event_comments_empty">No comments are available.</string>
    <string name="event_questions_empty">No questions are available.</string>
    <string name="event_comments_login">Log in to see and add comments.</string>
    <string name="event_questions_login">Log in to see and add questions.</string>
    <string name="event_details">Details</string>
    <string name="event_comments">Comments</string>
    <string name="event_comment">Comment</string>
    <string name="event_questions">Questions</string>
    <string name="event_question">Question</string>
    <string name="event_comment_sending">Sending comment ...</string>
    <string name="event_question_sending">Sending question ...</string>
    <string name="event_rate_sending">Sending rating ...</string>
    <string name="event_social_sending">Reporting social activity ...</string>
    <string name="event_document_checking">Checking document ...</string>
    <string name="event_checking">Checking event ...</string>
    <string name="event_rate">Rate</string>
    <string name="event_rate_error">Can\'t rate event.\nPlease try again later.</string>
    <string name="event_rate_not_available">Rating is not yet available</string>
    <string name="event_question_prefix">question by</string>
    <string name="event_comment_prefix">commented by</string>
    <string name="event_question_answer_prefix">answered by</string>
    <string name="speaker">Speaker</string>
    <string name="speaker_details">Details</string>
    <string name="speaker_events">Agenda</string>
    <string name="login_privacy_begining">By signing up, you agree to our </string>
    <string name="add_comment">Add comment</string>
    <string name="add_picture">Add picture</string>
    <string name="Facebook_share">Facebook share</string>
    <string name="facebook">Facebook</string>
    <string name="register_question">What does customer experience mean to you?</string>
    <string name="question_addon">Filling out this field is necessary to take part in the contest.  In case of a tie in points, the best slogan entered in this field will be of deciding value in settling on a winner.</string>
    <string name="signup">Sign up</string>
    <string name="madatory_fields">* mandatory fields</string>
</resources>