<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:id="@+id/register_account_main_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:clickable="true"
    android:layout_marginRight="15dp"
    android:background="@color/lighter_gray_background"
    android:paddingTop="@dimen/top_padding">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/back_button"
            android:id="@+id/back_button_layout"/>

        <com.comarch.conference.main.views.CustomEditText
            android:id="@+id/editTextOldPasswordChangeParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_below="@id/back_button_layout"
            android:hint="@string/password_old"
            android:inputType="textPassword"
            android:maxLength="250"
            android:padding="10dp"/>

        <com.comarch.conference.main.views.CustomEditText
            android:id="@+id/editTextNewPasswordChangeParticipant"
            android:layout_below="@id/editTextOldPasswordChangeParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:hint="@string/password_new_1"
            android:inputType="textPassword"
            android:padding="10dp"/>


        <com.comarch.conference.main.views.CustomEditText
            android:id="@+id/editTextNewPasswordRepeatChangeParticipant"
            android:layout_below="@id/editTextNewPasswordChangeParticipant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:hint="@string/password_new_2"
            android:inputType="textPassword"
            android:maxLength="250"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/buttonLoginAccount"
            android:layout_marginTop="5dp"
            style="@style/DetailsInfoMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextNewPasswordRepeatChangeParticipant"
            android:layout_alignParentRight="true"
            android:maxLength="250"
            android:padding="25dp"
            android:text="@string/password_change"/>

    </RelativeLayout>
</ScrollView>