<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/FullHeightDialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_dialog_white"
    android:minHeight="100dp"
    android:paddingBottom="30dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="30dp" >

    <TextView
        android:id="@+id/textViewErrorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/Facebook_share"
        android:textColor="@android:color/darker_gray"
        android:layout_alignParentTop="true"
        android:textSize="15sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/top_line"
        android:src="@drawable/background_line"
        android:layout_marginTop="10dp"
        android:layout_below="@id/textViewErrorLayout" />

    <TextView
        android:id="@+id/buttonShareFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_line"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/add_comment"
        android:layout_marginTop="10dp"
        android:gravity="center" />
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_below="@id/buttonShareFirst"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/bottom_line"
        android:layout_marginTop="10dp"
        android:src="@drawable/background_line" />

    <TextView
        android:id="@+id/buttonShareSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bottom_line"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="5dp"
        android:text="@string/add_picture"
        android:gravity="center"/>


</RelativeLayout>